manifests/hidmo/frontend/kitchen/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchen-management-ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kitchen-management-ui
  template:
    metadata:
      labels:
        app: kitchen-management-ui
    spec:
      containers:
        - name: kitchen-management-ui
          image: ivtheforth/kitchen-management-ui:latest
          ports:
            - containerPort: 80
