manifests/hidmo/frontend/kitchen/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kitchen-management-ui
spec:
  selector:
    app: kitchen-management-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
